--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -128,7 +128,146 @@
       "Failed": "Payment failed",
       "NoRating": "No Rating"
     }
+  },
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  "become-partner": {
+    "sub-head": "Explore a wide range of partnership advantages\nand be part of amazing crypto world.",
+
+    "block1-text1": "Join our\nAffiliate Program",
+    "block1-text2": "Become a\nLarge Customer",
+    "block1-text3": "Start Your\nOwn Exchange Platform",
+
+    "block2-title": "Join our Affiliate program",
+    "block2-text": "After registration, you will be given a unique link that you can send as an invitation to our exchange platform.\n\nOur system will recognize that your partner has come to a page through your link and will\nautomatically send you a commission that you can withdraw to any wallet.",
+    "block2-btn": "Create an account",
+
+
+    "block3-title": "Become a Large Customer of Unicash or Other Currency Under Special Condition",
+    "block3-text": "Do you already work as a currency or trading exchange?\nThe fundamental task of such exchanges is to resolve the cash flow.\nUnicash can help you with connecting wide network of payment services.\n\nExplore how Unicash works and contact us if you are interested in wholesale prices",
+
+    "block4-title": "Start Your Own Exchange Platform, We’ll Help You.",
+    "block4-text": "Every exchange on the global market is an important service for cryptocurrency users, as it helps to build infrastructure and compare price level.\n\nThe requested service is a guarantee of an interesting profit.\n\nWe offer an opportunity of setting up a partner exchange platform that would be our partner, as the demand for our services often exceeds our capacity.\n\nRead more about our partner exchange platform here and if interested, write us here:"
+  },
+
+
+  "invite-friends": {
+    "total": "Total Commission Earned:",
+    "how-work": "How Does It Work?",
+    "btn-withdraw-commission": "Withdraw commission",
+    "send-generated-link": "Send the generated link to your friends as an invitation to our exchange platform.\n\nOur system will recognize that your partner has come to a page through your link and will automatically give you commission that you can withdraw to any wallet.\n\nDo you have any other questions? Check <a href='#' class='link'>FAQ</a>\nsection or contact <a href='#' class='link'>technical support</a>.",
+    "list-of-all": "List of All Registered Partners",
+    "amount": "Amount",
+    "registration-date": "Registration date",
+    "first-name": "First and Last Name",
+    "status": "Status",
+    "refferal-link": "Refferal link"
+  },
+
+
+
+
+  "fees-discounts": {
+    "sub-head": "All fees and discounts in one clear table.\nIf you have any questions, don’t hesitate to contact our technical support."
+  },
+
+  "discount-program": {
+    "sub-head": "Register and get dynamic disccount.\nThe more you change, the greater discount.",
+    "title": "We Have 5 Level Discount Levels",
+    "total": "Total amount:",
+    "info": "<b class='h2'>2 USD</b> to exchange left to get <b class='h2'>3%</b> discount."
+  },
+
+
+
+  "prepaid-card": {
+    "sub-head": "Get access to wide variety of benefits with the prepaid card. Without any commitment!",
+    "title": "Explore The Benefits of Your Prepaid Card!"
+  },
+
+
+  "process4": {
+
+    "title": "Exchange summary",
+    "transfer": "transfer",
+    "input-system": "Input system:",
+    "output-system": "Output system:",
+    "amount": "Amount:",
+    "personal-information": "personal information",
+    "first-name": "First and last name:"
+  },
+
+
+
+
+
+  "process5": {
+
+    "title-sepa": "Money transfer – SEPA",
+    "bank-holder-address": "Bank account holder address:",
+    "bank-name": "Bank name:",
+    "bank-address": "Bank address:",
+
+
+    "title-account": "Money transfer – CZ account",
+    "sub-title": "<b>Send the amount</b> to the displayed\n<b>wallet address</b>. Do not confirm\n<b>the payment</b> until you really\n<b>pay the amount.</b>",
+    "amount-transfer": "amount to transfer",
+    "payment-information": "payment information",
+    "bank-holder": "Bank account holder:",
+    "bank-code": "Bank code:",
+    "bank-number": "Bank account number:",
+    "order-number": "Note – order number",
+    "info-instruction": "If you don’t follow the payment instructions, the transaction may take longer to process.\n\nPress the <b class='accentColor'>“Money sent”</b> button only when you actually <b class='redColor'>send the money.</b>",
+
+
+
+
+    "title-crypto": "Money transfer – Crypto",
+    "bitcoin-qr": "Bitcoin QR code payment:",
+    "scan-pay": "Scan the code and pay",
+    "wallet-address": "Bitcoin wallet address:",
+    "time-to-pay-left": "Time to pay left:"
+  },
+
+  "popup-question": {
+    "title": "Did you really send the amount?",
+    "yes": "Yes, I did.",
+    "no": "No, I didn’t."
+  },
+
+
+  "popup-money-sent": {
+    "title": "Congratulations! Money sent.",
+    "sub-title": "Go to the <b>following link</b> to check the <b>transaction status</b>",
+    "or": "Or",
+    "history": "Use transaction history section in your account.",
+    "btn-go-link": "Go to the link",
+    "btn-new-exchange": "New exchange"
+  },
+
+
+
+  "popup-fail": {
+    "title": "Something has gone wrong!",
+    "sub-title": "During the transaction an unknown error occured.",
+    "support": "Please contact technical support.",
+    "btn": "I understand."
   }
+
 
 
 
