[Slava] fix перевод строки title в prepaid-card

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -195,7 +195,7 @@
 
 
   "prepaid-card": {
-    "sub-head": "Get access to wide variety of benefits with the prepaid card. Without any commitment!",
+    "sub-head": "Get access to wide variety of benefits\nwith the prepaid card. Without any commitment!",
     "title": "Explore The Benefits of Your Prepaid Card!"
   },
 
