[Slava] fix перевод

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -175,7 +175,8 @@
     "registration-date": "Registration date",
     "first-name": "First and Last Name",
     "status": "Status",
-    "refferal-link": "Refferal link"
+    "refferal-link": "Refferal link",
+    "select-commission": "Select a commission"
   },
 
 
