[DANIL] last-commit

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,13 +10,13 @@
     "feesdiscount": "Fees & discounts",
     "faq": "FAQ",
     "news": "NEWS",
-    "landingmagazine": "Landing Magazine",
+    "landingmagazine": "Become a partner",
     "tablehistory": "TableHistory",
     "tablehistoryreviews": "TableHistoryReviews",
     "transactions": "Transactions",
     "partners": "Partners",
     "user-settings": "Settings",
-    "prepaid-card": "Prepaid-card",
+    "prepaid-card": "Prepaid cards",
     "discount": "Discount",
     "user-transactions-btn": "Transactions",
     "user-login-btn": "My Account",
@@ -104,7 +104,7 @@
       "col3": "Input Amount",
       "col4": "Output Method",
       "col5": "Output Amount",
-      "col6": "Transaction ID",
+      "col6": "Status",
       "col7": "Rating"
     },
 
