--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -83,6 +83,7 @@
     "Email": "The e-mail doesn’t match any account",
     "Password": "Passwords do not match",
     "EmailError": "Wrong email",
+    "minCountLimit": "Minimum amount is 0.01 USD",
     "PasswordError": "Wrong password"
   },
 
@@ -158,12 +159,12 @@
     "block1-text3": "Start Your\nOwn Exchange Platform",
 
     "block2-title": "Join our Affiliate program",
-    "block2-text": "After registration, you will be given a unique link that you can send as an invitation to our exchange platform.\n\nOur system will recognize that your partner has come to a page through your link and will\nautomatically send you a commission that you can withdraw to any wallet.",
+    "block2-text": "After registration, you will be given a unique link that you can send as an invitation to our exchange platform.\n\nOur system will recognize that your partner has come to a page through your link and will automatically send you a commission that you can withdraw to any wallet.",
     "block2-btn": "Create an account",
 
 
     "block3-title": "Become a Large Customer of Unicash or Other Currency Under Special Condition",
-    "block3-text": "Do you already work as a currency or trading exchange?\nThe fundamental task of such exchanges is to resolve the cash flow.\nUnicash can help you with connecting wide network of payment services.\n\nExplore how Unicash works and contact us if you are interested in wholesale prices",
+    "block3-text": "Do you already work as a currency or trading exchange?The fundamental task of such exchanges is to resolve the cash flow. Unicash can help you with connecting wide network of payment services.\n\nExplore how Unicash works and contact us if you are interested in wholesale prices.",
 
     "block4-title": "Start Your Own Exchange Platform, We’ll Help You.",
     "block4-text": "Every exchange on the global market is an important service for cryptocurrency users, as it helps to build infrastructure and compare price level.\n\nThe requested service is a guarantee of an interesting profit.\n\nWe offer an opportunity of setting up a partner exchange platform that would be our partner, as the demand for our services often exceeds our capacity.\n\nRead more about our partner exchange platform here and if interested, write us here:"
@@ -174,7 +175,7 @@
     "total": "Total Commission Earned:",
     "how-work": "How Does It Work?",
     "btn-withdraw-commission": "Withdraw commission",
-    "send-generated-link": "Send the generated link to your <b>friends</b> as an invitation to our exchange platform.\n\nOur system will <b>recognize that your partner</b> has come to a page through your link and will automatically <b>give you commission</b> that you can withdraw to any wallet.\n\nDo you have any other questions? Check <a href='#' class='link'>FAQ</a>\nsection or contact <a href='#' class='link'>technical support</a>.",
+    "send-generated-link": "Send the generated link to your <b>friends</b> as an invitation to our exchange platform.\n\nOur system will recognize that your partner has come to a page through your link and will automatically <b>give you commission</b> that you can withdraw to any wallet.\n\nDo you have any other questions? Check <a href='#' class='link'>FAQ</a>\nsection or contact <a href='#' class='link'>technical support</a>.",
     "list-of-all": "List of All Registered Partners",
     "amount": "Amount",
     "registration-date": "Registration date",
